<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Explore Bangalore</string>
    <string name="login_subtitle">Welcome back! Please login to your account.</string>
    <string name="signup_subtitle">Create a new account to explore Bangalore.</string>
    <string name="email_label">Email Address</string>
    <string name="password_label">Password</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Sign Up</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don\'t have an account? </string>
    <string name="have_account">Already have an account? </string>
    <string name="sign_up_link">Sign Up</string>
    <string name="login_link">Login</string>
    <string name="invalid_email">Invalid email format.</string>
    <string name="invalid_password">Password must be at least 6 characters.</string>
    <string name="invalid_credentials">Invalid email or password.</string>
    <string name="email_exists">Email already exists. Please login.</string>
    <string name="reset_sent">A password reset link has been sent to your email.</string>
    <string name="no_account_found">No account found with this email.</string>
    <string name="enter_email_reset">Please enter your email to reset password.</string>
    <string name="nav_map">Map</string>
    <string name="nav_search">Search</string>
    <string name="nav_places">Places</string>
    <string name="nav_ai">AI</string>
</resources>
